{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 435,
  "lineage": "aa7a4fbd-b115-66b7-9fab-1b3f2e4c92cb",
  "resources": [
    {
      "module": "module.VM[\"Windows-vm1\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/networkInterfaces/Windows-vm1-nic",
            "internal_domain_name_suffix": "v2qqtqxp0uvuzaouxpnxpnth1h.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Windows-vm1-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/alzr-vnet/subnets/subnetfe"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "60-45-BD-AD-62-7C",
            "name": "Windows-vm1-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "dev-rg",
            "virtual_machine_id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Compute/virtualMachines/Windows-vm1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "Windows-vm1-nic",
            "resource_group_name": "dev-rg",
            "subscription_id": "da901688-4838-4753-895c-39b7bc530feb"
          },
          "dependencies": [
            "module.pip.azurerm_public_ip.pip",
            "module.rg.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-attach[\"nsg-attach-vm1\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/alzr-vnet/subnets/subnet1",
            "network_security_group_id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-1",
            "subnet_id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/alzr-vnet/subnets/subnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg",
            "module.rg.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg[\"nsg-1\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-1",
            "location": "centralindia",
            "name": "nsg-1",
            "resource_group_name": "dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "3389"
                ],
                "direction": "Inbound",
                "name": "nsg-rule-1",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh22",
                "priority": 210,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "bastion-nsg": "all ports open",
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-1",
            "resource_group_name": "dev-rg",
            "subscription_id": "da901688-4838-4753-895c-39b7bc530feb"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.pip[\"ag-pip\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/ag-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.204.45.73",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "ag-pip",
            "resource_group_name": "dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owner": "nd"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "ag-pip",
            "resource_group_name": "dev-rg",
            "subscription_id": "da901688-4838-4753-895c-39b7bc530feb"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.pip[\"bastion-pip\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.219.216.136",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "bastion-pip",
            "resource_group_name": "dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owner": "nd"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "bastion-pip",
            "resource_group_name": "dev-rg",
            "subscription_id": "da901688-4838-4753-895c-39b7bc530feb"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.rules[\"nsg-rule-1\"]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "3389"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-1/securityRules/nsg-rule-1",
            "name": "nsg-rule-1",
            "network_security_group_name": "nsg-1",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-rule-1",
            "network_security_group_name": "nsg-1",
            "resource_group_name": "dev-rg",
            "subscription_id": "da901688-4838-4753-895c-39b7bc530feb"
          },
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"AzureBastionSubnet\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/alzr-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg",
            "virtual_network_name": "alzr-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureBastionSubnet",
            "resource_group_name": "dev-rg",
            "subscription_id": "da901688-4838-4753-895c-39b7bc530feb",
            "virtual_network_name": "alzr-vnet"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"Netapp-subnet\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/alzr-vnet/subnets/Netapp-subnet",
            "name": "Netapp-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg",
            "virtual_network_name": "alzr-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "Netapp-subnet",
            "resource_group_name": "dev-rg",
            "subscription_id": "da901688-4838-4753-895c-39b7bc530feb",
            "virtual_network_name": "alzr-vnet"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"subnet1\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/alzr-vnet/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg",
            "virtual_network_name": "alzr-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet1",
            "resource_group_name": "dev-rg",
            "subscription_id": "da901688-4838-4753-895c-39b7bc530feb",
            "virtual_network_name": "alzr-vnet"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"subnetfe\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/alzr-vnet/subnets/subnetfe",
            "name": "subnetfe",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg",
            "virtual_network_name": "alzr-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnetfe",
            "resource_group_name": "dev-rg",
            "subscription_id": "da901688-4838-4753-895c-39b7bc530feb",
            "virtual_network_name": "alzr-vnet"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"alzr-vnet\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c20921af-d5ef-4c2b-81d4-bbdb77b667df",
            "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/alzr-vnet",
            "location": "centralindia",
            "name": "alzr-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "dev-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/alzr-vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/alzr-vnet/subnets/subnet1",
                "name": "subnet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-1"
              },
              {
                "address_prefixes": [
                  "10.0.10.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/alzr-vnet/subnets/Netapp-subnet",
                "name": "Netapp-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/da901688-4838-4753-895c-39b7bc530feb/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/alzr-vnet/subnets/subnetfe",
                "name": "subnetfe",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "environment": "dev",
              "owner": "nd"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "alzr-vnet",
            "resource_group_name": "dev-rg",
            "subscription_id": "da901688-4838-4753-895c-39b7bc530feb"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}